Updated CircleCI Job Name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,7 +138,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: terraform init & plan
+          name: AWS CLI to deploy site
           command: |
             ls
             pwd
